# lightapi

./: .briar-smoke-1778801767.md  .cursorrules  .dockerignore  CHANGELOG.md  Dockerfile  LIGHTAPI_VALIDATION_REPORT.md  README.md  RELEASE_NOTES.md  YAML_CONFIGURATION_GUIDE.md  YAML_SYSTEM_SUMMARY.md  api_config.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sample.yaml  setup.py
.github/workflows/: docker-publish.yml  pages-publish.yml  python-publish.yml  test-dev.yml
docker/: entrypoint.py  lightapi.example.yaml
docs/: .pages  index.md  troubleshooting.md
docs/advanced/: async.md  authentication.md  caching.md  filtering.md  middleware.md  pagination.md  rate-limiting.md  validation.md
docs/api-reference/: .pages  auth.md  cache.md  core.md  database.md  exceptions.md  filters.md  index.md  models.md  pagination.md  rest.md  swagger.md  validation.md
docs/deployment/: docker.md  production.md
docs/examples/: .pages  advanced-permissions.md  auth.md  basic-crud.md  basic-rest.md  caching.md  custom-application.md  environment-variables.md  filtering-pagination.md  middleware.md  readonly-apis.md  validation.md  yaml-configuration.md
docs/getting-started/: .pages  configuration.md  first-steps.md  installation.md  introduction.md  quickstart.md
docs/technical-reference/: cache.md  core-api.md  endpoints.md  handlers.md  middleware.md  models.md
docs/tutorial/: basic-api.md  database.md  endpoints.md  requests.md  responses.md
examples/: 01_error_handling_basic.py  01_example.py  01_minimal.py  01_response_customization.py  02_crud.py  03_auth_jwt.py  04_auth_basic.py  05_permissions.py  06_pagination_page.py  07_pagination_cursor.py  08_filtering.py  09_caching.py  09_yaml_basic_example.py  09_yaml_database_types.py  09_yaml_environment_variables.py  10_async.py  10_blog_post.py  10_nested_resources.py  11_mixed_sync_async.py  12_queryset.py  13_middleware.py  14_background.py  15_yaml_config.py  16_rate_limit.py  17_relationships.py  18_full_api.py  README.md  YAML_EXAMPLES_INDEX.md  advanced_caching_redis.py  advanced_permissions_config.yaml  api.yaml  app.py  auth_example.py  basic_api.py  basic_config.yaml  basic_rest_api.py  batch_operations.py  blog_post.py  caching_example.py  comprehensive_config.yaml  (+48 more)
lightapi/: __init__.py  _dict_config_loader.py  _login.py  _registry.py  api.py  auth.py  auth_checker.py  auth_service.py  auth_strategy.py  body_reader.py  cache.py  cache_handler.py  cache_helper.py  cache_service.py  config.py  constants.py  core.py  crud_async.py  crud_sync.py  database.py  db.py  exceptions.py  fields.py  filters.py  handler_factory.py  handlers.py  http_dispatcher.py  jwt_custom.py  lightapi.py  loader.py  logging.py  methods.py  middleware.py  middleware_pipeline.py  middleware_runner.py  models.py  pagination.py  queryset.py  rate_limiter.py  response_wrapper.py  (+8 more)
lightapi/authentication/: __init__.py  base.py  basic.py  jwt.py
overrides/: 404.html
tests/: conftest.py  test_additional_features.py  test_api.py  test_async_crud.py  test_async_middleware.py  test_async_queryset.py  test_async_reflection.py  test_async_session.py  test_auth.py  test_auth_example.py  test_background_tasks.py  test_basic_rest_api.py  test_cache.py  test_cache_v2.py  test_caching_example.py  test_core.py  test_crud.py  test_custom_snippet.py  test_db.py  test_example.py  test_example_01_minimal.py  test_example_03_auth_jwt.py  test_example_06_pagination_page.py  test_example_08_filtering.py  test_examples_e2e.py  test_filtering.py  test_filtering_pagination_example.py  test_filters.py  test_from_config.py  test_helpers.py  test_http_methods.py  test_integration.py  test_lightapi_init.py  test_login_auth.py  test_middleware.py  test_middleware_example.py  test_mixed_sync_async.py  test_pagination.py  test_pipeline.py  test_queryset.py  (+9 more)
