[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "lightapi"
version = "0.1.17"
description = "A lightweight framework for building API endpoints using Python's native libraries."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "iklobato", email = "iklobato1@gmail.com" },
]
keywords = [
    "api",
    "rest",
    "restful",
    "endpoint",
    "lightweight",
    "framework",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "SQLAlchemy>=2.0.30,<3.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "pydantic>=2.0,<3.0",
    "starlette>=0.37.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "PyYAML>=6.0,<7.0",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
async = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "aiosqlite>=0.20,<1.0",
    "greenlet>=3.0,<4.0",
]
dev = [
    "pytest>=7.3.1,<9.0.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiosqlite>=0.20,<1.0",
    "ruff>=0.4.0",
    "mypy>=1.3.0,<2.0.0",
]
test = [
    "pytest>=7.3.1,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-glightbox",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin",
]

[project.urls]
Repository = "https://github.com/henriqueblobato/LightApi"
Issues = "https://github.com/henriqueblobato/LightApi/issues"
Homepage = "https://github.com/henriqueblobato/LightApi"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = "test_*.py"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "jwt.*",
    "redis.*",
    "yaml.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-asyncio>=0.26.0",
]
